# yplayer

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: dev.sh
tests/: test_core.py
yplayer/: __init__.py  albums.py  browse.py  cli.py  config.py  core.py  enhanced_browse.py  enhanced_playback.py  mpv_player.py  playback.py  playlist.py  utils.py
